exercises/12-ingress/dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: demo
  name: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: demo
    spec:
      containers:
      - image: bmuschko/nodejs-hello-world:1.0.0
        name: nodejs-hello-world
        ports:
        - containerPort: 3000
        resources: {}
status: {}
