exercises/12-ingress/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: demo
spec:
  ingressClassName: nginx
  rules:
  - host: demo-test.loc
    http:
      paths:
      - backend:
          service:
            name: demo
            port:
              number: 3000
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
